// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Testing snapshot for Posthog's identify destination action: all fields 1`] = `
{
  "api_key": "5fdYDWiv]V!gh$",
  "distinct_id": "5fdYDWiv]V!gh$",
  "event": "$identify",
  "properties": {
    "$set": {
      "testType": "5fdYDWiv]V!gh$",
    },
    "testType": "5fdYDWiv]V!gh$",
  },
  "timestamp": "2021-02-01T00:00:00.000Z",
}
`;

exports[`Testing snapshot for Posthog's identify destination action: required fields 1`] = `
{
  "api_key": "5fdYDWiv]V!gh$",
  "distinct_id": "5fdYDWiv]V!gh$",
  "event": "$identify",
  "properties": {
    "$set": {
      "testType": "5fdYDWiv]V!gh$",
    },
  },
}
`;
